<?xml version="1.0"?>
<package>
  <name>hmi_msgs</name>
  <version>0.0.0</version>
  <description>The hmi_msgs package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
