<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hmi</name>
  <version>0.0.0</version>
  <description>The hmi package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>grammar_parser</depend>
  <depend>actionlib</depend>
  <depend>hmi_msgs</depend>
  <depend>rospy</depend>
  <depend>zbar</depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-inquirer-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyzbar-pip</exec_depend>
  <exec_depend>python3-six</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend>python3-yaml</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
