<?xml version="1.0"?>
<package>
  <name>hmi_server</name>
  <version>0.0.0</version>
  <description>The hmi_server package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>hmi_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>hmi_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
