<?xml version="1.0"?>
<package>
  <name>hmi_zbar_server</name>
  <version>0.0.0</version>
  <description>The hmi_zbar_server package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hmi_server</build_depend>
  <run_depend>hmi_server</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>zbar_ros</run_depend>

</package>
