<?xml version="1.0"?>
<package>
  <name>hmi_zbar_server</name>
  <version>0.0.0</version>
  <description>The hmi_zbar_server package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hmi_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>qr_detector_zbar</run_depend>

</package>
